# FluidCare-backend

./: .gitignore  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  readme.md  requirements.txt
Extra/: MQTT TLS_SSL.py  function.md  help.md  queryFunction.md
auth_app/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
core/: asgi.py  celery.py  settings.py  urls.py
hospital_app/: admin.py  models.py  serializers.py  urls.py  views.py
notification_app/: admin.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
sensor_app/: admin.py  apps.py  consumers.py  helperFunction.py  models.py  mqtt_client.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
sensor_app/management/commands/: start_mqtt.py
survey_app/: admin.py  models.py  serializers.py
templates/: sensor_monitor.html
templates/admin/notification_app/: send_notification.html
templates/admin/notification_app/notification/: change_list.html
